tests/miniJava/neg/004426_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java else ( ) { return 0 ; } }
